--- a/index.html
+++ b/index.html
@@ -18,14 +18,93 @@
 <body>
     <main>
         <nav>
-            <div class="">
-                
+            <div class="nav-bar">
+                <div class="nav-bar-btn">
+                    <a><i class="fas fa-stream"></i></a>
+                </div>
+                <img src="public/img/logo-resize2.png" class="logo">
             </div>
         </nav>
+        <section class="banner">
+            <h2>Demandez le meilleur <span class="outer">babysitter</span> pour vos enfants</h2>
+            <p>Faites confiance à nos experts, nous garantissons une expérience professionnelle et conviviale,<br></p>
+            <p>pour le bonheur des plus jeunes.</p>
+        </section>
+        <section class="avis">
+            <div class="avisContainer">
+                <div class="avisContainerCard">
+                    <img src="http://drakary.cluster030.hosting.ovh.net/public/img/babysitter1.jpg">
+                    <div class="description">
+                        <h3>Jeanne</h3>
+                        <div class="liner"></div>
+                        <p>" Une étudiante à l'écoute et respectueuse de l'éducation portée à notre fils, ponctuelle et rigoureuse. On ne peut rêver mieux! "</p>
+                    </div>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </div>
+                <div class="avisContainerCard">
+                    <img src="http://drakary.cluster030.hosting.ovh.net/public/img/babysitter2.jpg">
+                    <div class="description">
+                        <h3>Louise</h3>
+                        <div class="liner"></div>
+                        <p>" Nous avons le plaisir d'engager une jeune femme dynamique et très pédagogue pour s'occuper de nos filles! "</p>
+                    </div>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                    </div>
+                </div>
+                <div class="avisContainerCard">
+                    <img src="http://drakary.cluster030.hosting.ovh.net/public/img/babysitter3.jpg">
+                    <div class="description">
+                        <h3>Pierre</h3>
+                        <div class="liner"></div>
+                        <p>" Les enfants sont ravis! Il leur apporte énormement, les loulous le considérent comme étant de la famille, c'est pour dire! "</p>
+                    </div>
+                    <div class="stars">
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="fas fa-star"></i>
+                        <i class="far fa-star"></i>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="banner2">
+            <h2>Commencez votre propre <span class="outer">experience</span> avec nos experts!</h2>
+            <p>Choisissez le profil que vous recherchez pour vos enfants. Vous pourrez changer de babysitter dés que le voudrez, sans vous justificer.</p>
+            <div class="buttonContainer">
+                <button>Découvrir nos profils ></button>
+            </div>
+        </section>
     </main>
     <footer>
         <div class="containerFooter">
-            
+            <div class="contact">
+                <h2 class="footerTitle">Contact</h2>
+                <a class="footerRedirect"><i class="fas fa-circle-notch"></i> Facebook</a>
+                <a class="footerRedirect"><i class="fas fa-circle-notch"></i> Instagram</a>
+                <a class="footerRedirect"><i class="fas fa-circle-notch"></i> Linkedin</a>
+            </div>
+            <div class="partenaires">
+                <h2 class="footerTitle">Nos Partenaires</h2>
+                <a class="footerRedirect"><i class="fas fa-circle-notch"></i> Devenir babysitter</a>
+            </div>
+            <div class="service-client">
+                <h2 class="footerTitle">Service Client</h2>
+                <a class="footerRedirect"><i class="fas fa-circle-notch"></i> Changer de babysitter</a>
+                <a class="footerRedirect"><i class="fas fa-circle-notch"></i> Annuler une demande</a>
+                <a class="footerRedirect"><i class="fas fa-circle-notch"></i> Signaler un problème technique</a>
+            </div>
         </div>
     </footer>
 </body>
