ajout de page profils

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="nav-bar-btn">
                     <a><i class="fas fa-stream"></i></a>
                 </div>
-                <img src="public/img/logo-resize2.png" class="logo">
+                <img src="C:/Users/Tony/Desktop/Projets/Kiddy Company/public/img/logo-resize.webp" class="logo">
             </div>
         </nav>
         <section class="banner">
@@ -33,7 +33,7 @@
         <section class="avis">
             <div class="avisContainer">
                 <div class="avisContainerCard">
-                    <img src="http://drakary.cluster030.hosting.ovh.net/public/img/babysitter1.jpg">
+                    <img src="C:/Users/Tony/Desktop/Projets/Kiddy Company/public/img/babysitter1-min.webp">
                     <div class="description">
                         <h3>Jeanne</h3>
                         <div class="liner"></div>
@@ -48,7 +48,7 @@
                     </div>
                 </div>
                 <div class="avisContainerCard">
-                    <img src="http://drakary.cluster030.hosting.ovh.net/public/img/babysitter2.jpg">
+                    <img src="C:/Users/Tony/Desktop/Projets/Kiddy Company/public/img/babysitter2-min.webp">
                     <div class="description">
                         <h3>Louise</h3>
                         <div class="liner"></div>
@@ -63,7 +63,7 @@
                     </div>
                 </div>
                 <div class="avisContainerCard">
-                    <img src="http://drakary.cluster030.hosting.ovh.net/public/img/babysitter3.jpg">
+                    <img src="C:/Users/Tony/Desktop/Projets/Kiddy Company/public/img/babysitter3-min.webp">
                     <div class="description">
                         <h3>Pierre</h3>
                         <div class="liner"></div>
@@ -83,7 +83,7 @@
             <h2>Commencez votre propre <span class="outer">experience</span> avec nos experts!</h2>
             <p>Choisissez le profil que vous recherchez pour vos enfants. Vous pourrez changer de babysitter dés que le voudrez, sans vous justificer.</p>
             <div class="buttonContainer">
-                <button>Découvrir nos profils ></button>
+                <a href="profils.html" target="_blank">Découvrir nos profils ></a>
             </div>
         </section>
     </main>
